added header name

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -2,6 +2,23 @@ body {
     background-color: black;
 }
 
+h1 {
+  text-align: center;
+  font-size: 3rem;
+  font-family: 'Gloria Hallelujah', cursive;
+  font-weight: lighter;
+  color: white;
+  padding-bottom:5rem;
+  position: relative;
+
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
 /*This is the style for our boxs' container. With it we can position and center the boxes in the browser.*/
 
 .instrument {
@@ -12,7 +29,7 @@ body {
     flex-wrap: wrap;
     align-items: center;
     margin: auto;
-    position: absolute;
+    position: relative;
     top: 0; left: 0; bottom: 0; right: 0;
 }
 
